--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -40,7 +40,7 @@ border-bottom:  1.5px rgba(92, 85, 85, 0.142) solid;
 #footer_card{
     display: flex;
     align-items: stretch;
-    justify-content: end;
+    justify-content: flex-end; 
     gap: 1rem;
     border-top:  1.5px rgba(92, 85, 85, 0.142) solid;
     padding: 1rem;
@@ -56,7 +56,7 @@ border-bottom:  1.5px rgba(92, 85, 85, 0.142) solid;
   font-weight: 600;
   line-height: normal;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   padding: 5px 10px;
   cursor: pointer;
