--- a/src/app/components/Detail/detail.module.css
+++ b/src/app/components/Detail/detail.module.css
@@ -10,7 +10,6 @@
     background: #ffffff89;
     transition: .3s;
     position: absolute;
-
 }
 .content_modal_detail{
     background: #000;
@@ -27,19 +26,17 @@
     font-weight: 600;
     letter-spacing: 1.44px;
     font-style: normal;
-
 }
 .content_modal_detail p{
     padding: 1rem 0;
     font-weight:300;
     font-size: 15px;
-    
 }
 #closed{
     width: 100%;
     display: flex;
-    align-items: end;
-    justify-content: end;
+    align-items: flex-end;
+    justify-content: flex-end;
     padding: 0 2rem;
     position: fixed;
     top: 10px;
@@ -64,17 +61,16 @@
     background: var(--bg_blue);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     border-radius: 7px;
     cursor: pointer;
     transition: .2s;
     gap: .25rem;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 1rem;
 }
-
 #icons div:hover{
     background: #3470f0b1;
 }
