--- a/src/app/components/SideBar/sidebar.module.css
+++ b/src/app/components/SideBar/sidebar.module.css
@@ -67,7 +67,7 @@
 #contain_tags{
 display: flex;
 flex-direction: column;
-align-items: start;
+align-items: flex-start;
 gap: 1rem;
 }
 #header_tags{
@@ -104,7 +104,7 @@ font-style: normal;
 font-weight: 600;
 line-height: normal;
 display: flex;
-align-items: start;
+align-items: flex-start;
 justify-content: center;
 padding: 5px 10px;
 cursor: pointer;
